--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -224,4 +224,7 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ### 门铃信号处理: Processing of Doorbell Signals
 
-硬件可以识别传递给正在运行的guest的门铃信号，而不管它是否可以作为虚拟中断立即注入到guest中。 在下一个VMRUN上，虚拟中断传递机制评估guest的vAPIC支持页的IRR寄存器的状态，以找到优先级最高的未决中断，并在中断屏蔽和优先级允许的情况下将其注入。
+**硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级允许**(priority allow)的情况下将其注入。
+
+## 额外的VMRUN处理: Additional VMRUN Handling
+
