--- a/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/0. 概述.md
@@ -4,5 +4,5 @@ VMCB State Caching
 
 根据特定的处理器实现，**VMRUN**从**VMCB**或从**VMCB状态缓存**加载**每个guest寄存器值**，这由VMCB中的**VMCB Clean字段的值指定**。 `CPUID Fn8000_000A_EDX [VmcbClean] = 1`表示**支持VMCB状态缓存**。
 
-SVM体系结构使用**VMCB的物理地址**作为guest虚拟CPU的唯一标识符以决定**缓存的副本是否属于guest**。 出于VMCB状态缓存的目的，ASID不是guest虚拟CPU的唯一标识符。
+SVM体系结构使用**VMCB的物理地址**作为**guest虚拟CPU**的**唯一标识符**以决定**缓存的副本是否属于guest**。 出于VMCB状态缓存的目的，**ASID！！！不是guest虚拟CPU的唯一标识符**。
 
