--- a/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/1. VMCB Clean Bits.md
+++ b/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/1. VMCB Clean Bits.md
@@ -1,5 +1,5 @@
 
-VMCB清除字段（VMCB Clean field, 在VMCB偏移量0C0h，`bits 31：0`）控制从VMRUN上的VMCB状态缓存加载哪些来宾寄存器值。 VMCB Clean字段中的每个设置位都允许处理器从硬件缓存中加载一个来宾寄存器或一组寄存器。 每个清除位都要求处理器从VMCB加载来宾寄存器。 这些干净的位是一个提示，因为任何给定的处理器实现都可能会忽略任何给定的VMRUN上设置为1的位，从而无条件地从VMCB加载关联的寄存器值。 始终将设置为零的干净位。
+VMCB Clean字段（VMCB Clean field, 在VMCB偏移量0C0h，`bits 31：0`）控制当**VMRUN时**从**VMCB状态缓存**加载**哪些guest寄存器值**。 VMCB Clean字段中的**每个设置位**都允许处理器从**硬件缓存**中加载一个guest寄存器或一组寄存器。 每个清除位都要求处理器从VMCB加载guest寄存器。 这些干净的位是一个提示，因为任何给定的处理器实现都可能会忽略任何给定的VMRUN上设置为1的位，从而无条件地从VMCB加载关联的寄存器值。 始终将设置为零的干净位。
 
 该字段与不支持VMCB状态缓存的CPU向后兼容。 较旧的CPU既不缓存VMCB状态，也不读取VMCB Clean字段。
 
