--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/1. VMCB Clean Bits.md
+++ b/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/1. VMCB Clean Bits.md
@@ -1,7 +1,11 @@
 
-VMCB Clean字段（VMCB Clean field, 在VMCB偏移量0C0h，`bits 31：0`）控制当**VMRUN时**从**VMCB状态缓存**加载**哪些guest寄存器值**。 VMCB Clean字段中的**每个设置位**都允许处理器从**硬件缓存**中加载一个guest寄存器或一组寄存器。 每个清除位都要求处理器从VMCB加载guest寄存器。 这些干净的位是一个提示，因为任何给定的处理器实现都可能会忽略任何给定的VMRUN上设置为1的位，从而无条件地从VMCB加载关联的寄存器值。 始终将设置为零的干净位。
+VMCB Clean字段（VMCB Clean field, 在VMCB偏移量0C0h，`bits 31：0`）控制当**VMRUN时**从**VMCB状态缓存**加载**哪些guest寄存器值**。 VMCB Clean字段中的
+* **每个设置位**(set bit)都允许处理器从**硬件缓存**中加载**一个guest寄存器**或**一组寄存器**; 
+* **每个清除位**(clear bit)都要求处理器从**VMCB**加载guest寄存器。 
 
-该字段与不支持VMCB状态缓存的CPU向后兼容。 较旧的CPU既不缓存VMCB状态，也不读取VMCB Clean字段。
+这些clear bits是一个提示，因为任何给定的**处理器**实现在任何给定的VMRUN时都可能会**忽略Clean字段设置为1的位**，从而**无条件**地从**VMCB**加载关联的寄存器值。而这种情况下, 将Clean字段相应设置为零总是应该的。
+
+VMCB Clean字段与**不支持VMCB状态缓存**的CPU**向后兼容**。 **较旧**的CPU既**不缓存VMCB状态**，也**不读取VMCB Clean字段**。
 
 不了解VMCB状态缓存并服从未定义VMCB字段的SBZ属性的较早的虚拟机管理程序将不会启用VMCB状态缓存。
 
