--- a/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/2. 清理VMCB Clean Bits的指南.md
+++ b/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/2. 清理VMCB Clean Bits的指南.md
@@ -3,11 +3,11 @@
 
 **guest的执行**可能导致**缓存状态被更新**，但是**hypervisor不负责设置！！！** 与由**guest执行**引起的任何状态更改相对应的VMCB Clean位。
 
-在以下情况下，hypervisor必须将guest的**整个VMCB字段清除为0**：
+在以下情况下，hypervisor必须将guest的**整个VMCB Clean field字段清除为0**：
 
-•这是特定guest第一次运行。
-•虚拟机hypervisor在不同于上次执行guest虚拟机的CPU内核上执行guest虚拟机。
-•自上次执行访客以来，hypervisor已将访客的VMCB移到了另一个物理页面。
+* 这是特定**guest第一次运行**。
+* hypervisor在**不同于**上次执行guest虚拟机的**CPU内核**上执行guest虚拟机。
+* 自上次执行访客以来，hypervisor已将访客的VMCB移到了另一个物理页面。
 
 在这些情况下，如果无法将VMCB Clean位清零，则可能导致不确定的行为。
 
