--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/2. 清理VMCB Clean Bits的指南.md
+++ b/Virtualization/Learning/AMD虚拟化/15. VMCB状态缓存/2. 清理VMCB Clean Bits的指南.md
@@ -11,6 +11,6 @@
 
 在这些情况下，如果无法将VMCB Clean位清零，则可能导致不确定的行为。
 
-当hypervisor执行当前**未缓存的guest虚拟机**时，CPU会**自动**将当前VMRUN上的**VMCB Clean field字段**视为**零**。如果没有缓存的VMCB地址匹配，CPU会将**VMCB物理地址**与所有**缓存的VMCB物理地址**进行比较，并将**VMCB Clean field字段**视为**零**。
+当hypervisor执行当前**未缓存的guest虚拟机**时，CPU会**自动**将当前VMRUN上的**VMCB Clean field字段**视为**零**。CPU会将**VMCB物理地址**与所有**缓存的VMCB物理地址**进行比较，如果没有缓存的VMCB地址匹配，会将**VMCB Clean field字段**视为**零**。
 
 更改VMCB内容的SMM软件（或hypervisor外部可访问VMCB的任何其他代理）需要理解并相应地调整干净位；否则客人可能无法按预期操作。
