--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
@@ -414,4 +414,9 @@ SVM 的 Host 状态区需要**手工分配内存**，并将地址保存在**VM_H
 
 ## 6.3. 新的指令
 
-此外，SVM还引入了一组新的指令，包括VMRUN用于发起VM-Entry，VMSAVE/VMLOAD 用于配置 VMCB，STGI/CLGI 用于配置 GIF（Global Interrupt Flag，全局中断标识）的值。
+此外，SVM还引入了一组新的指令，包括
+* VMRUN用于发起VM-Entry，
+* VMSAVE/VMLOAD 用于配置 VMCB，
+* VMMCALL 用于调用VMM
+* STGI/CLGI 用于配置 GIF（Global Interrupt Flag，全局中断标识）的值。
+
