--- a/Virtualization/Learning/AMD虚拟化/Secure Virtual Machine/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/Secure Virtual Machine/29. AVIC/1. 介绍.md
@@ -10,7 +10,7 @@ VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I
 * 为**guest操作系统**提供对性能至关重要的**中断控制器寄存器的访问**
 * 在一个guest中发起**处理器内部中断**(self ipi?)和**处理器之间中断**
 
-AVIC硬件无法直接解决从**I/O设备**到**虚拟处理器**的**虚拟中断传递**的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。 AVIC体系结构与AMD I/O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I/O虚拟化技术（IOMMU）规范（编号48882）。
+AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！！** 的**虚拟中断传递！！！** 的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。 AVIC体系结构与AMD I/O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I/O虚拟化技术（IOMMU）规范（编号48882）。
 
 # LAPIC寄存器访问
 
