--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -1,11 +1,11 @@
 
 在虚拟计算机系统中，每个guest操作系统都需要访问中断控制器以发送和接收**设备**和**核间中断**。当**没有硬件加速**时，这个任务会落在**虚拟机监视器**（VMM）上，以**拦截**guest发起的**访问中断控制器寄存器**的尝试，并提供对**控制器系统编程接口**的直接模拟，从而使guest能够发起和处理中断。
 
-VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I/O设备**和虚拟处理器传递到**目标guest虚拟处理器**，并处理任何所需的中断处理结束(即ACK)。
+VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I/O设备**和虚拟处理器传递到**目标guest虚拟处理器**，并处理任何所需的**中断处理结束**(即ACK)。
 
 鉴于现代计算机系统中设备和处理器间中断的高发生率，LAPIC的仿真是VMM的重大负担。
 
-通过将**硬件加速**应用于中断处理的以下组件，AVIC体系结构解决了虚拟环境中guest中断处理的开销：
+通过将**硬件加速**应用于**中断处理**的以下组件，AVIC体系结构降低了虚拟环境中guest中断处理的开销：
 
 * 为**guest操作系统**提供对性能至关重要的**中断控制器寄存器的访问**
 * 在一个guest中发起**处理器内部中断**(self ipi?)和**处理器之间中断**
@@ -41,4 +41,4 @@ IPI还用于为诸如**跨处理器TLB无效**（也称为TLB shootdown）之类
 
 TLB invalidation/ TLB shootdown.
 
-AVIC提供的硬件机制**无需VMM干预**即可将中断传递到**目标虚拟处理器**的**虚拟中断控制器**。
+AVIC提供的硬件机制**无需VMM干预！！！** 即可将中断传递到**目标虚拟处理器**的**虚拟中断控制器**。
