--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -1,4 +1,34 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 虚拟LAPIC: Virtualizing the Local APIC](#1-虚拟lapic-virtualizing-the-local-apic)
+  - [1.1. 虚拟APIC寄存器访问: Virtual APIC Register Accesses](#11-虚拟apic寄存器访问-virtual-apic-register-accesses)
+    - [1.1.1. 任务优先级寄存器: Task Priority Register(TPR)](#111-任务优先级寄存器-task-priority-registertpr)
+    - [1.1.2. 处理器优先级寄存器: Processor Priority Register(PPR)](#112-处理器优先级寄存器-processor-priority-registerppr)
+    - [1.1.3. 中断结束寄存器: End of Interrupt(EOI) Register](#113-中断结束寄存器-end-of-interrupteoi-register)
+    - [1.1.4. 中断命令寄存器低位: Interrupt Control Register Low(ICRL)](#114-中断命令寄存器低位-interrupt-control-register-lowicrl)
+- [2. AVIC对VMCB修改的支持: VMCB Changes in Support of AVIC](#2-avic对vmcb修改的支持-vmcb-changes-in-support-of-avic)
+  - [2.1. VMCB控制字段: VMCB Control Word](#21-vmcb控制字段-vmcb-control-word)
+  - [2.2. 新定义的VMCB域](#22-新定义的vmcb域)
+- [3. AVIC内存数据结构](#3-avic内存数据结构)
+  - [3.1. 虚拟APIC backing页: Virtual APIC Backing Page](#31-虚拟apic-backing页-virtual-apic-backing-page)
+  - [3.2. 物理APIC ID表: Physical APIC ID Table](#32-物理apic-id表-physical-apic-id-table)
+  - [3.3. 逻辑APIC ID表: Logical APIC ID Table](#33-逻辑apic-id表-logical-apic-id-table)
+- [4. 中断传递: Interrupt Delivery](#4-中断传递-interrupt-delivery)
+  - [4.1. 处理器间中断: IPI, AVIC硬件](#41-处理器间中断-ipi-avic硬件)
+  - [4.2. 设备中断: Device Interrupts, IOMMU](#42-设备中断-device-interrupts-iommu)
+- [5. CPUID功能位: CPUID Feature Bits](#5-cpuid功能位-cpuid-feature-bits)
+- [6. 新的处理器机制: New Processor Mechanisms](#6-新的处理器机制-new-processor-mechanisms)
+  - [6.1. 特殊的陷阱/故障处理: Special Trap/Fault Handling for vAPIC Accesses](#61-特殊的陷阱故障处理-special-trapfault-handling-for-vapic-accesses)
+  - [6.2. 门铃机制: Doorbell Machanism](#62-门铃机制-doorbell-machanism)
+    - [6.2.1. 门铃注册: Doorbell Register](#621-门铃注册-doorbell-register)
+    - [6.2.2. 门铃信号处理: Processing of Doorbell Signals](#622-门铃信号处理-processing-of-doorbell-signals)
+  - [6.3. 额外的VMRUN处理: Additional VMRUN Handling](#63-额外的vmrun处理-additional-vmrun-handling)
+
+<!-- /code_chunk_output -->
+
 以下各节介绍了AVIC的架构。
 
 # 1. 虚拟LAPIC: Virtualizing the Local APIC
@@ -144,13 +174,13 @@ LAPIC ID表(Logical APIC ID Table).
 
 如果访客尝试更改其APIC的逻辑ID，则VMM必须在逻辑APIC ID表中反映此更改。中航工业硬件支持针对一个或多个逻辑目标的固定中断消息类型。硬件还支持通过ICRL的目标速记（DSH）字段指定的自身和广播传递模式。 VMM必须通过仿真来支持其他任何消息类型。
 
-# 中断传递: Interrupt Delivery
+# 4. 中断传递: Interrupt Delivery
 
 虚拟中断有两种基本类型：处理器间中断（IPI）和I / O设备中断（设备中断）。 guest系统软件写入ICRL寄存器时，将启动IPI。 设备中断由已由guest系统软件（通常是设备驱动程序）编程的I / O设备发起，以将表示事件的消息发送到特定的guest物理处理器。 该消息通常包括指示事件性质的中断向量号。
 
 以下各节讨论当虚拟处理器发信号通知IPI时由AVIC硬件采取的措施，以及当设备发信号通知虚拟中断时由I/O虚拟化硬件采取的措施。
 
-## 处理器间中断: IPI, AVIC硬件
+## 4.1. 处理器间中断: IPI, AVIC硬件
 
 处理器间中断(Interprocessor Interrupts, IPI). 要处理IPI，**AVIC硬件**会执行以下步骤：
 
@@ -170,7 +200,7 @@ LAPIC ID表(Logical APIC ID Table).
 
 有关与上面列出的#VMEXIT例外相关的新退出代码，请参阅第531页的“ AVIC IPI交付未完成”。
 
-## 设备中断: Device Interrupts, IOMMU
+## 4.2. 设备中断: Device Interrupts, IOMMU
 
 **I/O设备中断向虚拟处理器的传递过程**是由具有**虚拟中断功能**的**IOMMU**处理的。 为了传递虚拟中断，I/O虚拟化硬件(IOMMU)执行以下步骤：
 
@@ -183,17 +213,17 @@ LAPIC ID表(Logical APIC ID Table).
 
 如果作为中断目标的虚拟处理器**已经**被调度到物理处理器**运行**（由设置的Physical APIC ID表条目的IsRunning位指示），则I/O虚拟化硬件将使用**表条目**中的**主机物理APIC ID**来向相应的**host CPU**发送门铃(doorbell)信号，以表明需要处理中断。
 
-# CPUID功能位: CPUID Feature Bits
+# 5. CPUID功能位: CPUID Feature Bits
 
 CPUID Feature Bits用于指示在特定硬件实现的**AVIC支持**。 为此指定了`CPUID Fn8000_000A_EDX[AVIC]`，并在**EDX**的`bit 13`中将其返回。如果设置了`EDX[13]`，则该硬件**支持AVIC**体系结构。
 
 有关使用CPUID指令的更多信息，请参见`See Section 3.3, “Processor Feature Identification,”`
 
-# 新的处理器机制: New Processor Mechanisms
+# 6. 新的处理器机制: New Processor Mechanisms
 
 为了支持将中断**直接注入到guest中**并**加速关键的vAPIC功能**，处理器中采用了新的硬件机制。
 
-## 特殊的陷阱/故障处理: Special Trap/Fault Handling for vAPIC Accesses
+## 6.1. 特殊的陷阱/故障处理: Special Trap/Fault Handling for vAPIC Accesses
 
 为了虚拟化guest使用的LAPIC来生成和处理中断，guest虚拟处理器对其**LAPIC寄存器**的所有**读取**和**写入**访问都将**重定向**到**vAPIC backing页面**。对该guest物理地址范围的大多数读取和多次写入均以对应的偏移量读取或写入vAPIC backing页面内的内存位置的内容。
 
@@ -208,13 +238,13 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 读取和写入vAPIC backing页面内的位置，但允许超出已定义的vAPIC寄存器的偏移范围。
 
-## 门铃机制: Doorbell Machanism
+## 6.2. 门铃机制: Doorbell Machanism
 
 每个core提供门铃机制，**其他core**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core**的VMM发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
 
 在guest模式下接收到门铃后，**接收core**上的**硬件**会评估vAPIC backing页面中当前正在运行的**虚拟处理器**的**vAPIC状态**，并根据需要**将中断注入guest**。
 
-### 门铃注册: Doorbell Register
+### 6.2.1. 门铃注册: Doorbell Register
 
 门铃机制的**系统编程接口**是通过**MSR提供**的。通过将与**该core**相对应的**物理APIC ID**写**入门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
 
@@ -222,9 +252,9 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 **写入该寄存器**会使**门铃信号**发送到**指定的物理core**。 从该寄存器**读取**的任何尝试**均会**导致`#GP`。
 
-### 门铃信号处理: Processing of Doorbell Signals
+### 6.2.2. 门铃信号处理: Processing of Doorbell Signals
 
 **硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级允许**(priority allow)的情况下将其注入。
 
-## 额外的VMRUN处理: Additional VMRUN Handling
+## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
