--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -1,4 +1,14 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [LAPIC寄存器访问](#lapic寄存器访问)
+  - [软件中断: Self-IPIs](#软件中断-self-ipis)
+  - [处理器间中断: 核间中断](#处理器间中断-核间中断)
+
+<!-- /code_chunk_output -->
+
 在虚拟计算机系统中，每个guest操作系统都需要访问中断控制器以发送和接收**设备**和**核间中断**。当**没有硬件加速**时，这个任务会落在**虚拟机监视器**（VMM）上，以**拦截**guest发起的**访问中断控制器寄存器**的尝试，并提供对**控制器系统编程接口**的直接模拟，从而使guest能够发起和处理中断。
 
 VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I/O设备**和虚拟处理器传递到**目标guest虚拟处理器**，并处理任何所需的**中断处理结束**(即ACK)。
