--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -43,11 +43,11 @@
 
 要将**虚拟机vAPIC寄存器的guest访问**正确重定向到vAPIC backing页面，该硬件需要**两个地址**。 这些是：
 * **系统物理地址(SPA)空间**中的**vAPIC backing页面地址**, HPA/SPA
-* **虚拟机物理地址(GPA)空间**中的**guest vAPIC基址**(APIC BAR)
+* **虚拟机物理地址(GPA)空间**中的**guest vAPIC基址**(APIC BAR), GPA
 
-**系统软件**负责在**嵌套页面表**(nested page table)中**设置转换关系**，以授予**guest读写**访问**SPA空间**中**vAPIC backing页面**的权限。AVIC硬件walks nested page table(嵌套页面表)以**检查权限**，但**不使用**在**叶子页表条目**中指定的**SPA地址**。而是，AVIC硬件在**VMCB**的`AVIC_BACKING_PAGE`指针字段中找到此地址。
+**系统软件**负责在**嵌套页面表！！！** (nested page table)中**设置转换关系**，以授予**guest读写**访问**SPA空间**中**vAPIC backing页面**的权限。AVIC硬件walks nested page table(嵌套页面表)以**检查权限！！！**，但**不使用**在**叶子页表条目**中指定的**SPA地址**。而是，AVIC硬件在**VMCB**的`AVIC_BACKING_PAGE`指针字段中找到此地址。
 
-VMM使用适当的**默认APIC寄存器值**（包括诸如**APIC版本号**之类的项目）初始化backing页面。vAPIC backing页面地址和guest vAPIC基址分别存储在VMCB字段`AVIC_BACKING_PAGE`**指针**和`V_APIC_BAR`中。
+VMM使用适当的**默认APIC寄存器值**（包括诸如**APIC版本号**之类的项目）初始化backing页面。**vAPIC backing页面地址**和**guest vAPIC基址**分别存储在**VMCB**字段`AVIC_BACKING_PAGE`**指针**和`V_APIC_BAR`中。
 
 系统固件将**guest vAPIC基址**（和`VMCB.V_APIC_BAR`）的值初始化为`FEE0_0000h`。 **guest操作系统**在**引导**时希望在**此地址**找到**LAPIC寄存器集**。
 
