--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 中断控制器的访问](#1-中断控制器的访问)
+- [1. 中断](#1-中断)
   - [1.1. 没有硬件加速](#11-没有硬件加速)
   - [1.2. 硬件加速](#12-硬件加速)
 - [2. LAPIC寄存器访问](#2-lapic寄存器访问)
@@ -12,13 +12,13 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 中断控制器的访问
+# 1. 中断
 
 在虚拟计算机系统中，**每个guest**操作系统都需要**访问中断控制器**以发送和接收**设备中断！！！** 和**核间中断！！！**。
 
 ## 1.1. 没有硬件加速
 
-当**没有硬件加速**时，这个任务会落在**虚拟机监视器**（VMM）上，以**拦截**guest发起的**访问中断控制器寄存器**的尝试，并提供对**控制器系统编程接口**的直接模拟，从而使guest能够发起和处理中断。
+当**没有硬件加速**时，这个任务会落在**虚拟机监视器**（VMM）上，以**拦截**guest发起的**访问中断控制器寄存器**的尝试，并提供对**控制器系统编程接口**的直接模拟，从而使**guest**能够**发起**和**处理**中断。
 
 **VMM**使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I/O设备**和**虚拟处理器**传递到**目标guest虚拟处理器**，并处理任何所需的**中断处理结束**(即ACK)。
 
@@ -26,20 +26,25 @@
 
 鉴于现代计算机系统中设备和处理器间中断的高发生率，LAPIC的仿真是VMM的重大负担。
 
-通过将**硬件加速**应用于**中断处理**的以下组件，AVIC体系结构降低了虚拟环境中guest中断处理的开销：
+通过将**硬件加速**应用于**中断处理**的以下组件，**AVIC**体系结构降低了虚拟环境中guest中断处理的开销：
 
 * 为**guest操作系统**提供对性能至关重要的**中断控制器寄存器的访问**
 * 在一个guest中发起**处理器内部中断**(self ipi?)和**处理器之间中断**
 
-AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！！** 的**虚拟中断传递！！！** 的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。 AVIC体系结构与AMD I/O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I/O虚拟化技术（IOMMU）规范（编号48882）。
+AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！！** 的**虚拟中断传递！！！** 的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。
+
+AVIC体系结构与AMD I/O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I/O虚拟化技术（IOMMU）规范（编号48882）。
 
 # 2. LAPIC寄存器访问
 
 Local APIC Register Access
 
-LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped registers)。 在非虚拟化环境中，系统软件直接读取和写入这些寄存器以配置中断控制器以及启动和处理中断。 在虚拟化环境中，每个guest操作系统仍需要访问此系统编程接口，但不拥有底层中断处理硬件。 为了将此功能提供给guest操作系统，VMM级别的软件会模拟每个guest虚拟处理器的LAPIC。
+LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped registers)。
 
-当实例化guest虚拟机时，AVIC体系结构在**每个虚拟处理器**的**guest物理地址**（GPA）空间中提供称为guest虚拟APIC（guest vAPIC）的LAPIC的映像。该映像由**系统物理地址**（SPA）**空间**中的**页面**（称为vAPIC backing page, **vAPIC备份页面**）支持。只要虚拟机持续存在，即使与该后退页面关联的特定虚拟处理器未运行，该后退页面仍固定在**系统内存中**。guest设置的对内存映射寄存器的**访问**由**AVIC硬件重定向到此backing页**。
+* 在**非虚拟化环境**中，系统软件**直接读取**和**写入**这些寄存器以**配置中断控制器**以及**启动和处理中断**。 
+* 在**虚拟化环境**中，每个guest操作系统仍需要访问此系统编程接口，但**不拥有底层中断处理硬件**。 为了将此功能提供给guest操作系统，VMM级别的软件会**模拟每个guest虚拟处理器的LAPIC**。
+
+当实例化guest虚拟机时，**AVIC！！！** 体系结构在**每个虚拟处理器**的**guest物理地址**（GPA）空间中提供了LAPIC的映像(image), 被称为**guest虚拟APIC(guest vAPIC**)。该映像由**系统物理地址**（SPA）**空间**中的**页面**（称为vAPIC backing page, **vAPIC备份页面**）支持。只要虚拟机持续存在，即使与**该backing页面**关联的特定虚拟处理器**未运行**，该backing页面仍固定在**系统内存中**。guest设置的对内存映射寄存器的**访问**由**AVIC硬件重定向到此backing页**。
 
 VMM从backing页读取guest写入的配置、控制和命令信息，并将状态信息写入此页面以供guest读取。
 * guest被允许**直接读取大多数寄存器**，而**无需VMM干预**。
