--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -46,9 +46,10 @@ LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped re
 
 当实例化guest虚拟机时，**AVIC！！！** 体系结构在**每个虚拟处理器**的**guest物理地址**（GPA）空间中提供了LAPIC的映像(image), 被称为**guest虚拟APIC(guest vAPIC**)。该映像由**系统物理地址**（SPA）**空间**中的**页面**（称为vAPIC backing page, **vAPIC备份页面**）支持。只要虚拟机持续存在，即使与**该backing页面**关联的特定虚拟处理器**未运行**，该backing页面仍固定在**系统内存中**。guest设置的对内存映射寄存器的**访问**由**AVIC硬件重定向到此backing页**。
 
-VMM从backing页读取guest写入的配置、控制和命令信息，并将状态信息写入此页面以供guest读取。
+VMM从backing页读取guest写入的配置、控制和命令信息，并**将状态信息写入此页面**以供**guest读取**。
 * guest被允许**直接读取大多数寄存器**，而**无需VMM干预**。
-* **大多数写入都会被拦截**，从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。
+* **大多数guest写入都会被拦截**，从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。
+
 但是，对于某些经常使用的命令和控制操作，**特定的硬件支持**允许guest**直接发起中断**并**完成中断处理**，从而在执行对性能至关重要的操作时**无需VMM干预**。
 
 ## 2.1. 软件中断: Self-IPIs
