--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -24,7 +24,7 @@
 
 ## 1.2. 硬件加速
 
-鉴于现代计算机系统中设备和处理器间中断的高发生率，LAPIC的仿真是VMM的重大负担。
+鉴于现代计算机系统中**设备中断**和**处理器间中断**的高发生率，LAPIC的仿真是VMM的重大负担。
 
 通过将**硬件加速**应用于**中断处理**的以下组件，**AVIC**体系结构降低了虚拟环境中guest中断处理的开销：
 
