--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -28,7 +28,7 @@
 
 通过将**硬件加速**应用于**中断处理**的以下组件，**AVIC**体系结构降低了虚拟环境中guest中断处理的开销：
 
-* 为**guest操作系统**提供对性能至关重要的**中断控制器寄存器的访问**
+* 为**guest操作系统**提供对性能至关重要的**中断控制器！！！(interrupt controller)寄存器的访问**
 * 在一个guest中发起**处理器内部中断**(self ipi?)和**处理器之间中断**
 
 AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！！** 的**虚拟中断传递！！！** 的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。
@@ -58,14 +58,14 @@ VMM从backing页读取guest写入的配置、控制和命令信息，并**将状
 
 现代操作系统使用**软件中断**（`self-IPIs`）来实现**软件事件信号**，**进程间通信**和**延迟处理的调度**。软件中断, software interrupts, 使用 `self-IPI`, 即处理器自己给自己发中断, 主要用来实现前面说的三种场景.
 
-**系统软件**通过写入**LAPIC的控制寄存器**来设置并启动这些中断。 AVIC硬件通过为**许多此类操作**提供硬件帮助来**减少VMM开销**。
+**系统软件**通过写入**LAPIC的控制寄存器**来设置并启动这些中断。 
+
+AVIC硬件通过为**许多此类操作**提供硬件帮助来**减少VMM开销**。
 
 ## 2.2. 处理器间中断: 核间中断
 
 **处理器间中断**。 处理器间中断（IPI）被现代操作系统广泛使用，以处理机器内**处理器核心(processor cores)之间**（或在**虚拟化环境**中，虚拟机内**虚拟处理器之间**）的通信。 
 
-IPI还用于为诸如**跨处理器TLB无效**（也称为TLB shootdown）之类的操作提供信令和同步。 
-
-TLB invalidation/ TLB shootdown.
+IPI还用于为诸如**跨处理器TLB无效**（TLB invalidation, 也称为TLB shootdown）之类的操作提供信令(signaling)和同步(synchronization)。 
 
 AVIC提供的硬件机制**无需VMM干预！！！** 即可将中断传递到**目标虚拟处理器**的**虚拟中断控制器**。
