--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -6,7 +6,7 @@
 - [1. 中断](#1-中断)
   - [1.1. 没有硬件加速](#11-没有硬件加速)
   - [1.2. 硬件加速](#12-硬件加速)
-- [2. LAPIC寄存器访问](#2-lapic寄存器访问)
+- [2. LAPIC寄存器访问: Local APIC Register Access](#2-lapic寄存器访问-local-apic-register-access)
 - [](#)
   - [2.1. 软件中断: Self-IPIs](#21-软件中断-self-ipis)
   - [2.2. 处理器间中断: 核间中断](#22-处理器间中断-核间中断)
@@ -36,9 +36,9 @@ AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！
 
 AVIC体系结构与AMD I/O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I/O虚拟化技术（IOMMU）规范（编号48882）。
 
-# 2. LAPIC寄存器访问
+下面就针对这两种AVIC加速做个简要介绍
 
-Local APIC Register Access
+# 2. LAPIC寄存器访问: Local APIC Register Access
 
 LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped registers)。
 
