--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -30,7 +30,9 @@
 通过将**硬件加速**应用于**中断处理**的以下组件，**AVIC**体系结构降低了虚拟环境中guest中断处理的开销：
 
 * 为**guest操作系统**提供对性能至关重要的**中断控制器！！！(interrupt controller)寄存器的访问**
-* 在一个guest中发起**处理器内部中断**(self ipi?)和**处理器之间中断**
+* 一个guest中, 发起**处理器内部中断**(self ipi?)和**处理器之间中断**
+
+Initiating intra- and inter-processor interrupts (IPIs) in and between virtual processors in a guest
 
 AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！！** 的**虚拟中断传递！！！** 的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。
 
