--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -7,7 +7,7 @@
   - [1.1. 没有硬件加速](#11-没有硬件加速)
   - [1.2. 硬件加速](#12-硬件加速)
 - [2. LAPIC寄存器访问: Local APIC Register Access](#2-lapic寄存器访问-local-apic-register-access)
-- [](#)
+- [处理器](#处理器)
   - [2.1. 软件中断: Self-IPIs](#21-软件中断-self-ipis)
   - [2.2. 处理器间中断: 核间中断](#22-处理器间中断-核间中断)
 
@@ -55,7 +55,7 @@ VMM从backing页读取guest写入的配置、控制和命令信息，并**将状
 
 但是，对于某些经常使用的命令和控制操作，**特定的硬件支持**允许guest**直接发起中断**并**完成中断处理**，从而在执行对性能至关重要的操作时**无需VMM干预**。
 
-# 
+# 处理器
 
 ## 2.1. 软件中断: Self-IPIs
 
