--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR寄存器-IPI.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR寄存器-IPI.md
@@ -24,6 +24,8 @@
 
 **ICR与LVT寄存器部分域作用是相同的**，此外还新增了几个域。
 
+注: IPI有两个意思, Intra-process interrupt(处理器内部中断, 也称为self-IPI) 和 Inter-processor interrupt(处理器之间中断), 所以有些资料会统称IPIs.
+
 # 2. Destination Shorthand域
 
 这个域设置发送IPI消息的**目标类型**。
