--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -259,7 +259,11 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ### 6.2.2. 门铃信号处理: Processing of Doorbell Signals
 
-**硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级允许**(priority allow)的情况下将其注入。
+**硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下将其注入。
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
+除了正常的VMRUN操作外，core在进入guest时还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断**。 特别：
+* 当VMRUN时，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并传递IRR中指示的最高优先级的挂起中断
+* 进入访客后，VMRUN处理期间收到的任何门铃信号都会被立即识别
+* 为虚拟处理器启用了AVIC模式时，将忽略VMCB中的V_IRQ，V_INTR_PRIO，V_INTR_VECTOR和V_IGN_TPR字段。
