--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -264,6 +264,6 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
 除了正常的VMRUN操作外，core在进入guest时还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断**。 特别：
-* 当VMRUN时，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并传递IRR中指示的最高优先级的挂起中断
-* 进入访客后，VMRUN处理期间收到的任何门铃信号都会被立即识别
+* 当VMRUN时，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)IRR中表示的最高优先级的挂起中断(pending interrupt)
+* 进入guest后，VMRUN处理期间收到的任何门铃信号都会被立即识别
 * 为虚拟处理器启用了AVIC模式时，将忽略VMCB中的V_IRQ，V_INTR_PRIO，V_INTR_VECTOR和V_IGN_TPR字段。
