--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -26,6 +26,8 @@
     - [6.2.1. 门铃注册: Doorbell Register](#621-门铃注册-doorbell-register)
     - [6.2.2. 门铃信号处理: Processing of Doorbell Signals](#622-门铃信号处理-processing-of-doorbell-signals)
   - [6.3. 额外的VMRUN处理: Additional VMRUN Handling](#63-额外的vmrun处理-additional-vmrun-handling)
+- [新的退出码: New Exit Codes for AVIC](#新的退出码-new-exit-codes-for-avic)
+  - [AVIC IPI交付未完成: AVIC IPI Delivery Not Completed](#avic-ipi交付未完成-avic-ipi-delivery-not-completed)
 
 <!-- /code_chunk_output -->
 
@@ -265,5 +267,13 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 除了正常的VMRUN操作外，core在进入guest时还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断**。 特别：
 * 当**VMRUN时**，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)IRR中表示的最高优先级的挂起中断(pending interrupt)
-* **进入guest后**，VMRUN处理期间收到的任何门铃信号都会被立即识别
-* 为虚拟处理器启用了AVIC模式时，将忽略VMCB中的V_IRQ，V_INTR_PRIO，V_INTR_VECTOR和V_IGN_TPR字段。
+* **进入guest后**，**VMRUN处理期间**收到的任何门铃信号都会被立即识别
+* 为虚拟处理器启用了AVIC模式时，将忽略VMCB中的`V_IRQ`，`V_INTR_PRIO`，`V_INTR_VECTOR`和`V_IGN_TPR`字段。
+
+# 新的退出码: New Exit Codes for AVIC
+
+AVIC架构定义了两个新的AVIC相关的`#VMEXIT`事件。 以下各节将介绍这些情况。 分配的`EXITCODE`值在第631页的表C-1中给出。
+
+## AVIC IPI交付未完成: AVIC IPI Delivery Not Completed
+
+无法将IPI交付给所有目标客户虚拟处理器，因为当时至少一个客户虚拟处理器没有分配给物理核心。 这将导致退出代码为AVIC_INCOMPLETE_IPI的#VMEXIT。 与此#VMEXIT事件关联的其他数据在EXITINFO1和EXITINFO2字段中返回。
