--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -26,8 +26,9 @@
     - [6.2.1. 门铃注册: Doorbell Register](#621-门铃注册-doorbell-register)
     - [6.2.2. 门铃信号处理: Processing of Doorbell Signals](#622-门铃信号处理-processing-of-doorbell-signals)
   - [6.3. 额外的VMRUN处理: Additional VMRUN Handling](#63-额外的vmrun处理-additional-vmrun-handling)
-- [新的退出码: New Exit Codes for AVIC](#新的退出码-new-exit-codes-for-avic)
-  - [AVIC IPI交付未完成: AVIC IPI Delivery Not Completed](#avic-ipi交付未完成-avic-ipi-delivery-not-completed)
+- [7. 新的退出码: New Exit Codes for AVIC](#7-新的退出码-new-exit-codes-for-avic)
+  - [7.1. AVIC IPI交付未完成: AVIC IPI Delivery Not Completed](#71-avic-ipi交付未完成-avic-ipi-delivery-not-completed)
+  - [7.2. AVIC 访问未加速的vAPIC寄存器: AVIC Access to un-accelerated vAPIC register](#72-avic-访问未加速的vapic寄存器-avic-access-to-un-accelerated-vapic-register)
 
 <!-- /code_chunk_output -->
 
@@ -261,7 +262,9 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ### 6.2.2. 门铃信号处理: Processing of Doorbell Signals
 
-**硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下将其注入。
+**硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
+
+在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下将其注入。
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
@@ -270,10 +273,20 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 * **进入guest后**，**VMRUN处理期间**收到的任何门铃信号都会被立即识别
 * 为虚拟处理器启用了AVIC模式时，将忽略VMCB中的`V_IRQ`，`V_INTR_PRIO`，`V_INTR_VECTOR`和`V_IGN_TPR`字段。
 
-# 新的退出码: New Exit Codes for AVIC
+# 7. 新的退出码: New Exit Codes for AVIC
 
 AVIC架构定义了两个新的AVIC相关的`#VMEXIT`事件。 以下各节将介绍这些情况。 分配的`EXITCODE`值在第631页的表C-1中给出。
 
-## AVIC IPI交付未完成: AVIC IPI Delivery Not Completed
+## 7.1. AVIC IPI交付未完成: AVIC IPI Delivery Not Completed
 
-无法将IPI交付给所有目标客户虚拟处理器，因为当时至少一个客户虚拟处理器没有分配给物理核心。 这将导致退出代码为AVIC_INCOMPLETE_IPI的#VMEXIT。 与此#VMEXIT事件关联的其他数据在EXITINFO1和EXITINFO2字段中返回。
+**无法**将IPI交付给**所有目标guest虚拟处理器**，因为当时**至少一个guest虚拟处理器**没有分配给**物理核心**。 这将导致退出代码为`AVIC_INCOMPLETE_IPI`的`#VMEXIT`。 
+
+与此`#VMEXIT`事件关联的其他数据在EXITINFO1和EXITINFO2字段中返回。
+
+......
+
+## 7.2. AVIC 访问未加速的vAPIC寄存器: AVIC Access to un-accelerated vAPIC register
+
+AVIC访问未加速的vAPIC寄存器。 guest访问**未通过AVIC加速**的APIC寄存器会导致`#VMEXIT`，其退出代码为`AVIC_NOACCEL`。 
+
+如果将最高优先级的in-service中断设置为**电平触发模式**，则尝试执行**EOI**时也会产生此故障。 与此`#VMEXIT`事件关联的其他数据在EXITINFO1和EXITINFO2字段中返回。
