--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -7,9 +7,9 @@
   - [1.1. 没有硬件加速](#11-没有硬件加速)
   - [1.2. 硬件加速](#12-硬件加速)
 - [2. LAPIC寄存器访问: Local APIC Register Access](#2-lapic寄存器访问-local-apic-register-access)
-- [IPIs](#ipis)
-  - [2.1. 软件中断: Self-IPIs, vCPU内部](#21-软件中断-self-ipis-vcpu内部)
-  - [2.2. 处理器间中断: 核间中断, vCPU之间](#22-处理器间中断-核间中断-vcpu之间)
+- [3. IPIs](#3-ipis)
+  - [3.1. 软件中断: Self-IPIs, vCPU内部](#31-软件中断-self-ipis-vcpu内部)
+  - [3.2. 处理器间中断: 核间中断, vCPU之间](#32-处理器间中断-核间中断-vcpu之间)
 
 <!-- /code_chunk_output -->
 
@@ -55,11 +55,11 @@ VMM从backing页读取guest写入的配置、控制和命令信息，并**将状
 
 但是，对于某些经常使用的命令和控制操作，**特定的硬件支持**允许guest**直接发起中断**并**完成中断处理**，从而在执行对性能至关重要的操作时**无需VMM干预**。
 
-# IPIs
+# 3. IPIs
 
 IPI有两个意思, Intra-process interrupt(处理器内部中断, 也称为`self-IPI`) 和 Inter-processor interrupt(处理器之间中断), 所以有些资料会统称IPIs.
 
-## 2.1. 软件中断: Self-IPIs, vCPU内部
+## 3.1. 软件中断: Self-IPIs, vCPU内部
 
 **软件启动的中断**(Software-initiated Interrupts)。 
 
@@ -69,7 +69,7 @@ IPI有两个意思, Intra-process interrupt(处理器内部中断, 也称为`sel
 
 **AVIC硬件**通过为**许多此类操作**提供硬件帮助来**减少VMM开销**。
 
-## 2.2. 处理器间中断: 核间中断, vCPU之间
+## 3.2. 处理器间中断: 核间中断, vCPU之间
 
 **处理器间中断**。 处理器间中断（IPI）被现代操作系统广泛使用，以处理机器内**处理器核心(processor cores)之间**（或在**虚拟化环境**中，虚拟机内**虚拟处理器之间**）的通信。 
 
