--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -36,7 +36,7 @@
 
 # 1. 虚拟LAPIC: Virtualizing the Local APIC
 
-* **guest虚拟处理器**通过读写位于**guest物理地址空间**中**4KB页面**中的**一组寄存器**来访问其LAPIC的功能。(**GPA**)
+* **guest虚拟处理器**通过**读写！！！** 位于**guest物理地址空间**中**4KB页面**中的**一组寄存器**来**访问其LAPIC的功能！！！**。(**GPA**)
 * **AVIC硬件**通过将guest的尝试访问**重定向**到位于**系统物理地址**（System physical address, SPA）空间中的**vAPIC backing页面**来虚拟化此访问。(**HPA**)
 
 注: guest肯定访问的是guest自己的地址空间, 这里对lapic的访问使用的是物理地址, 所以是guest物理地址, 但是最终还是会落到真实的物理地址, 这部分也就是AVIC的工作.
@@ -46,7 +46,7 @@
 ![2020-09-07-09-37-12.png](./images/2020-09-07-09-37-12.png)
 
 要将**虚拟机vAPIC寄存器的guest访问**正确重定向到vAPIC backing页面，该硬件需要**两个地址**。 这些是：
-* **系统物理地址(SPA)空间**中的**vAPIC backing页面地址**, HPA/SPA
+* **系统物理地址(SPA)空间**中的**vAPIC backing页面地址**(vAPIC backing page address), HPA/SPA
 * **虚拟机物理地址(GPA)空间**中的**guest vAPIC基址**(Guest vAPIC base address, APIC BAR), GPA
 
 **系统软件**负责在**嵌套页面表！！！** (nested page table)中**设置转换关系**，以授予**guest读写**访问**SPA空间！！！** 中**vAPIC backing页面**的权限。AVIC硬件walks nested page table(嵌套页面表)以**检查权限！！！**，但**不使用**在**叶子页表条目**中指定的**SPA地址**。而是，AVIC硬件在**VMCB**的`AVIC_BACKING_PAGE`指针字段中找到此地址。
