--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -150,11 +150,19 @@ AVIC体系结构定义了**三个新的内存驻留数据结构**。这些结构
 
 ## 3.1. 虚拟APIC backing页: Virtual APIC Backing Page
 
-**虚拟APIC backing页**(Virtual APIC Backing Page)。系统中的**每个虚拟处理器**都分配有**一个虚拟APIC backing页面**（vAPIC backing page）。guest对guest物理地址空间中的LAPIC寄存器块的访问将重定向到系统内存中的vAPIC backing页面。 AVIC硬件和VMM使用vAPIC backing页面来模拟LAPIC。有关详细说明，请参见第517页的“虚拟APIC寄存器访问”。
+**虚拟APIC backing页**(Virtual APIC Backing Page)。每个vCPU一个.
+
+系统中的**每个虚拟处理器**都分配有**一个虚拟APIC backing页面**（vAPIC backing page）。
+
+guest对guest物理地址空间中的LAPIC寄存器块的访问将**重定向**到系统内存中的vAPIC backing页面。
+
+ AVIC硬件和VMM使用vAPIC backing页面来模拟LAPIC。有关详细说明，请参见`1.1 虚拟APIC寄存器访问`。
 
 ## 3.2. 物理APIC ID表: Physical APIC ID Table
 
-物理APIC ID表由**VMM设置和维护**，并由**硬件**用于**定位适当的vAPIC backing页面**，该页面将用于根据**guest物理APIC ID**传递中断。**每个虚拟机**必须提供**一个物理APIC ID表**。
+**每个虚拟机**必须提供**一个物理APIC ID表**。
+
+物理APIC ID表由**VMM设置和维护**，**硬件**用它来**定位适当的vAPIC backing页面**，该页面将用于根据**guest物理APIC ID**传递中断。
 
 **guest物理APIC ID**用作此表的**索引**。每个条目都包含一个指向**虚拟处理器**的**vAPIC backing页面**的指针，一个指示**虚拟处理器**当前**是否已在物理CPU上调度**的位以及（如果是）该**物理CPU**的**物理APIC ID**。
 
