--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -24,7 +24,7 @@
 - [5. CPUID功能位: CPUID Feature Bits](#5-cpuid功能位-cpuid-feature-bits)
 - [6. 新的处理器机制: New Processor Mechanisms](#6-新的处理器机制-new-processor-mechanisms)
   - [6.1. vAPIC访问的特殊陷阱/故障处理: Special Trap/Fault Handling for vAPIC Accesses](#61-vapic访问的特殊陷阱故障处理-special-trapfault-handling-for-vapic-accesses)
-  - [6.2. 门铃机制: Doorbell Machanism](#62-门铃机制-doorbell-machanism)
+  - [6.2. 门铃机制: Doorbell Mechanism](#62-门铃机制-doorbell-mechanism)
     - [6.2.1. 门铃注册: Doorbell Register](#621-门铃注册-doorbell-register)
     - [6.2.2. 门铃信号处理: Processing of Doorbell Signals](#622-门铃信号处理-processing-of-doorbell-signals)
   - [6.3. 额外的VMRUN处理: Additional VMRUN Handling](#63-额外的vmrun处理-additional-vmrun-handling)
@@ -268,15 +268,15 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 读取和写入vAPIC backing页面内的位置，但允许超出已定义的vAPIC寄存器的偏移范围。
 
-## 6.2. 门铃机制: Doorbell Machanism
+## 6.2. 门铃机制: Doorbell Mechanism
 
-每个core提供门铃机制，**其他core**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core**的VMM发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
+**每个core提供门铃机制**，**其他CPUcore**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core**的VMM发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
 
 在guest模式下接收到门铃后，**接收core**上的**硬件**会评估vAPIC backing页面中当前正在运行的**虚拟处理器**的**vAPIC状态**，并根据需要**将中断注入guest**。
 
 ### 6.2.1. 门铃注册: Doorbell Register
 
-门铃机制的**系统编程接口**是通过**MSR提供**的。通过将与**该core**相对应的**物理APIC ID**写**入门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
+门铃机制的**系统编程接口**是通过**MSR提供**的。通过将与**该core**相对应的**物理APIC ID**写入**门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
 
 ![2020-09-08-09-56-44.png](./images/2020-09-08-09-56-44.png)
 
