--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -286,7 +286,7 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 **硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
 
-在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下将其注入。
+在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
