--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -276,7 +276,9 @@ vCPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的
 
 ### 6.2.1. 门铃注册: Doorbell Register
 
-门铃机制的**系统编程接口**是通过**MSR提供**的。通过将与**该core**相对应的**物理APIC ID**写入**门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
+门铃机制的**系统编程接口**是通过**MSR提供**的。
+
+通过将与**该core**相对应的**物理APIC ID**写入**门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
 
 ![2020-09-08-09-56-44.png](./images/2020-09-08-09-56-44.png)
 
