--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -270,9 +270,11 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ## 6.2. 门铃机制: Doorbell Mechanism
 
-**每个core提供门铃机制**，**其他CPUcore**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core**的VMM发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
+这个机制只有虚拟化下? 物理情况下?
 
-vCPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的**硬件**会评估vAPIC backing页面中当前正在运行的**虚拟处理器**的**vAPIC状态**，并根据需要**将中断注入guest**。
+**每个core提供门铃机制**，**其他CPUcore**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core的VMM**发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
+
+CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的**硬件**会评估vAPIC backing页面中当前正在运行的**虚拟处理器**的**vAPIC状态**，并根据需要**将中断注入guest**。
 
 ### 6.2.1. 门铃注册: Doorbell Register
 
@@ -282,7 +284,8 @@ vCPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的
 
 ![2020-09-08-09-56-44.png](./images/2020-09-08-09-56-44.png)
 
-**写入该寄存器**会使**门铃信号**发送到**指定的物理core**。 从该寄存器**读取**的任何尝试**均会**导致`#GP`。
+* **写入该寄存器**会使**门铃信号**发送到**指定的物理core**。 
+* 从该寄存器**读取**的任何尝试**均会**导致`#GP`。
 
 ### 6.2.2. 门铃信号处理: Processing of Doorbell Signals
 
