--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -280,16 +280,18 @@ CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的*
 
 门铃机制的**系统编程接口**是通过**MSR提供**的。
 
-通过将与**该core**相对应的**物理APIC ID**写入**门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
+将core A对应的物理APIC ID写入门铃寄存器(`MSR C001_011Bh`)会发送门铃信号到core A. 该寄存器的格式如下图15-22所示。
 
 ![2020-09-08-09-56-44.png](./images/2020-09-08-09-56-44.png)
 
 * **写入该寄存器**会使**门铃信号**发送到**指定的物理core**。 
 * 从该寄存器**读取**的任何尝试**均会**导致`#GP`。
 
+注: 这里的`物理APIC ID`不是`guest physical APIC ID`??
+
 ### 6.2.2. 门铃信号处理: Processing of Doorbell Signals
 
-**硬件**可以识别传递给**正在运行的guest**的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
+**硬件**可以识别传递给**正在运行的guest！！！** 的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
 
 在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。
 
