--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -272,6 +272,8 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 这个机制只有虚拟化下? 物理情况下?
 
+这个机制类似于Intel下的`Posted Interrupt`.
+
 **每个core提供门铃机制**，**其他CPUcore**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core的VMM**发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
 
 CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的**硬件**会评估vAPIC backing页面中当前正在运行的**虚拟处理器**的**vAPIC状态**，并根据需要**将中断注入guest**。
@@ -294,6 +296,9 @@ CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的*
 **硬件**可以识别传递给**正在运行的guest！！！** 的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
 
 在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。
+
+1. 设置irr寄存器
+2. 
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
