--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -289,16 +289,19 @@ CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的*
 * **写入该寄存器**会使**门铃信号**发送到**指定的物理core**。 
 * 从该寄存器**读取**的任何尝试**均会**导致`#GP`。
 
-注: 这里的`物理APIC ID`不是`guest physical APIC ID`??
+注: 这里的`物理APIC ID`不是`guest physical APIC ID`, 而是真实CPU的APIC ID
 
 ### 6.2.2. 门铃信号处理: Processing of Doorbell Signals
 
 **硬件**可以识别传递给**正在运行的guest！！！** 的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
 
-在下一次VMRUN，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。
+(如果vcpu没有在运行, ????)在**下一次VMRUN**，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。
 
-1. 设置irr寄存器
-2. 如果vcpu正在运行,
+kvm中代码:
+
+1. 设置**irr寄存器**(都会做这一步)
+2. 如果目标vcpu正在运行, 写目标vcpu所在的物理CPU APIC ID到Doorbell寄存器, vcpu自动处理该中断，不需要软件干预
+3. 如果目标vCPU没有运行, 那么唤醒目标vCPU便结束. 中断会在下次VMRUN的时候处理
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
