--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -274,7 +274,9 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 这个机制类似于Intel下的`Posted Interrupt`.
 
-**每个core提供门铃机制**，**其他CPUcore**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core的VMM**发出信号，告知**需要处理虚拟中断**。 确切的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
+**每个core提供门铃机制**，**其他CPUcore**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core的VMM**发出信号，告知**需要处理虚拟中断**。 而这个对虚拟中断的处理还是会去读取IRR寄存器的内容, 详细的下面会讲到.
+
+准确的机制是特定实现的，但是必须加以保护，以防止其他core上运行的非特权软件的访问以及外部设备的直接访问。
 
 CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的**硬件**会评估vAPIC backing页面中当前正在运行的**虚拟处理器**的**vAPIC状态**，并根据需要**将中断注入guest**。
 
@@ -295,7 +297,7 @@ CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的*
 
 **硬件**可以识别传递给**正在运行的guest！！！** 的**门铃信号**，而**不管**它**是否**可以作为虚拟中断**立即注入到guest**中。
 
-(如果vcpu没有在运行, ????)在**下一次VMRUN**，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。
+(如果vcpu没有在运行, ????)在**下一次VMRUN**，**虚拟中断传递机制**评估guest的**vAPIC backing页**的**IRR寄存器的状态**，以找到优先级最高的**未决中断**(pending interrupt)，并在**中断屏蔽**(interrupt masking)和**优先级**(priority)允许的情况下**将其注入**。这个就是下面`6.3`中的额外处理。
 
 kvm中代码:
 
@@ -305,10 +307,12 @@ kvm中代码:
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
-除了正常的VMRUN操作外，core在进入guest时还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断**。 特别：
-* 当**VMRUN时**，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)IRR中表示的最高优先级的挂起中断(pending interrupt)
+除了正常的VMRUN操作外，core在**进入guest时！！！** 还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断！！！**。 这个就是额外的VMRUN处理.
+
+特别是：
+* 当**VMRUN时**，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)**IRR**中表示的**最高优先级**的**挂起中断**(pending interrupt). 这就是`6.2.2`的vcpu没运行时依赖的机制.
 * **进入guest后**，**VMRUN处理期间**收到的任何门铃信号都会被立即识别
-* 为虚拟处理器启用了AVIC模式时，将忽略VMCB中的`V_IRQ`，`V_INTR_PRIO`，`V_INTR_VECTOR`和`V_IGN_TPR`字段。
+* 为虚拟处理器启用了**AVIC模式**时，将忽略VMCB中的`V_IRQ`，`V_INTR_PRIO`，`V_INTR_VECTOR`和`V_IGN_TPR`字段。
 
 # 7. 新的退出码: New Exit Codes for AVIC
 
