--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -28,7 +28,7 @@
     - [6.2.1. 门铃注册: Doorbell Register](#621-门铃注册-doorbell-register)
     - [6.2.2. 门铃信号处理: Processing of Doorbell Signals](#622-门铃信号处理-processing-of-doorbell-signals)
   - [6.3. 额外的VMRUN处理: Additional VMRUN Handling](#63-额外的vmrun处理-additional-vmrun-handling)
-- [7. 新的退出码: New Exit Codes for AVIC](#7-新的退出码-new-exit-codes-for-avic)
+- [7. AVIC新的退出码: New Exit Codes for AVIC](#7-avic新的退出码-new-exit-codes-for-avic)
   - [7.1. AVIC IPI交付未完成: AVIC IPI Delivery Not Completed](#71-avic-ipi交付未完成-avic-ipi-delivery-not-completed)
   - [7.2. AVIC 访问未加速的vAPIC寄存器: AVIC Access to un-accelerated vAPIC register](#72-avic-访问未加速的vapic寄存器-avic-access-to-un-accelerated-vapic-register)
 
@@ -307,16 +307,18 @@ kvm中代码:
 
 ## 6.3. 额外的VMRUN处理: Additional VMRUN Handling
 
-除了正常的VMRUN操作外，core在**进入guest时！！！** 还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断！！！**。 这个就是额外的VMRUN处理.
+除了正常的VMRUN操作外，core在**进入guest时！！！** 还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断！！！**。 这个就是额外的VMRUN处理, AVIC打开后的效果.
 
 特别是：
 * 当**VMRUN时**，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)**IRR**中表示的**最高优先级**的**挂起中断**(pending interrupt). 这就是`6.2.2`的vcpu没运行时依赖的机制.
 * **进入guest后**，**VMRUN处理期间**收到的任何门铃信号都会被立即识别
 * 为虚拟处理器启用了**AVIC模式**时，将忽略VMCB中的`V_IRQ`，`V_INTR_PRIO`，`V_INTR_VECTOR`和`V_IGN_TPR`字段。
 
-# 7. 新的退出码: New Exit Codes for AVIC
+# 7. AVIC新的退出码: New Exit Codes for AVIC
 
 AVIC架构定义了两个新的AVIC相关的`#VMEXIT`事件。 以下各节将介绍这些情况。 分配的`EXITCODE`值在第631页的表C-1中给出。
+
+注: 只有AVIC打开后才会有下面两个有下面两种错误码
 
 ## 7.1. AVIC IPI交付未完成: AVIC IPI Delivery Not Completed
 
