--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -51,9 +51,14 @@ LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped re
 
 VMM从backing页读取guest写入的配置、控制和命令信息，并**将状态信息写入此页面**以供**guest读取**。
 * guest被允许**直接读取大多数寄存器**，而**无需VMM干预**。
-* **大多数guest写入都会被拦截**，从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。
+* **大多数guest写入都会被拦截**，产生`#VMEXIT`, 从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。
 
 但是，对于某些经常使用的命令和控制操作，**特定的硬件支持**允许guest**直接发起中断**并**完成中断处理**，从而在执行对性能至关重要的操作时**无需VMM干预**。
+
+* 任务优先级寄存器: Task Priority Register(TPR), 加速
+* 中断结束寄存器: End of Interrupt(EOI) Register, 加速
+* 中断命令寄存器低位: Interrupt Control Register Low(ICRL), 加速
+* IRCH, allowed
 
 # 3. IPIs
 
