--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -322,7 +322,7 @@ CPU如果**正处于guest模式**, 在接收到门铃后，**接收core**上的*
 
 kvm中代码:
 
-1. 设置**irr寄存器**(都会做这一步)
+1. 设置**irr寄存器**(都应该要做这一步, 但是这个实际上不属于Doorbell机制的一部分)
 2. 如果目标vcpu正在运行, 写目标vcpu所在的物理CPU APIC ID到Doorbell寄存器, vcpu自动处理该中断，不需要软件干预
 3. 如果目标vCPU没有运行, 那么唤醒目标vCPU便结束. 中断会在下次VMRUN的时候处理
 
