--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
@@ -18,4 +18,10 @@ Traditional Paging versus Nested Paging
 * **嵌套页表**（nPT）是guest物理地址到**系统物理地址**的映射。 嵌套的页表位于**系统物理内存**中，并由nCR3指向。
 * 最近使用的从**guest线性地址**到**系统物理地址**的转换存储在**TLB**中，并在以后的guest访问中使用。
 
+重要的是要注意，**gCR3**和**guest页面表条目**包含**guest物理地址**，而不是系统物理地址。
+
+因此，在**访问guest页面表条目**之前，table walker首先将**该条目的guest物理地址**转换为系统物理地址。
+
 ![2020-09-10-08-44-50.png](./images/2020-09-10-08-44-50.png)
+
+VMM可以为每个guest提供不同的ASID，以便来自不同guest的TLB条目可以共存于TLB中。 主机的ASID值为零。 如果VMM尝试以guestASID为零执行VMRUN，则结果为#VMEXIT（VMEXIT_INVALID）。 请注意，由于ASID与guest的物理地址空间相关联，因此它在处理器内的所有guest的虚拟地址空间中是通用的。 这与影子页面表不同，在影子页面表中，ASID标记各个guest虚拟地址空间。 还要注意，对于嵌套表或影子表，同一ASID可能会或可能不会与多处理器系统中所有处理器上的同一地址空间相关联； 这取决于VMM如何管理ASID分配。
