--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
@@ -20,8 +20,10 @@ Traditional Paging versus Nested Paging
 
 重要的是要注意，**gCR3**和**guest页面表条目**包含**guest物理地址**，而不是系统物理地址。
 
-因此，在**访问guest页面表条目**之前，table walker首先将**该条目的guest物理地址**转换为系统物理地址。
+因此，在**访问guest页面表条目**之前，table walker首先将**该条目的guest物理地址**转换为**系统物理地址**。
 
 ![2020-09-10-08-44-50.png](./images/2020-09-10-08-44-50.png)
 
-VMM可以为每个guest提供不同的ASID，以便来自不同guest的TLB条目可以共存于TLB中。 主机的ASID值为零。 如果VMM尝试以guestASID为零执行VMRUN，则结果为#VMEXIT（VMEXIT_INVALID）。 请注意，由于ASID与guest的物理地址空间相关联，因此它在处理器内的所有guest的虚拟地址空间中是通用的。 这与影子页面表不同，在影子页面表中，ASID标记各个guest虚拟地址空间。 还要注意，对于嵌套表或影子表，同一ASID可能会或可能不会与多处理器系统中所有处理器上的同一地址空间相关联； 这取决于VMM如何管理ASID分配。
+VMM可以为**每个guest**提供**不同的ASID**，以便来自**不同guest**的**TLB条目**可以共存于TLB中。ASID值为零保留给host使用。如果**VMM**尝试以**guest ASID为零**执行**VMRUN**，则结果为`#VMEXIT`（`VMEXIT_INVALID`）。
+
+请注意，由于**ASID**与**guest的物理地址空间！！！** 相**关联**，因此在**一个CPU**内的**所有虚拟机**的**虚拟地址空间**中是**通用**的。 这与**影子页表**不同，在影子页表中，**ASID**标记**各个guest虚拟地址空间**。 还要注意，对于**嵌套页表**或**影子页表**，**同一ASID**可能**会或不会**与多处理器系统中**所有处理器**上的**同一地址空间**相关联； 这取决于VMM如何管理ASID分配。
