--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/2. 复制状态.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/2. 复制状态.md
@@ -1,3 +1,9 @@
 Replicated State
 
-影响分页的大多数处理器状态都为主机和来宾复制。 这包括分页寄存器CR0，CR3，CR4，EFER和PAT。 CR2未复制，但由VMRUN加载。 MTRR不被复制。
+影响分页的**大多数处理器状态**都为host和guest复制。 这包括分页寄存器**CR0**，**CR3**，**CR4**，**EFER**和**PAT**。 CR2未复制，但会被VMRUN加载。 MTRR不被复制。
+
+**启用嵌套分页**后，
+* 所有（guest）通过x86代码（`MOV to/from CRn`等）对分页寄存器的状态的引用都将**读取和写入**寄存器的**guest副本**;
+* VMM的寄存器版本保持不变，并继续控制从**guest物理地址**到**系统物理地址**的第二级转换。 
+
+相反，当**禁用嵌套分页**时，VMM的**分页控制寄存器**存储在主机状态保存区域中，guestVMCB的分页控制寄存器是这些寄存器的唯一活动版本。
