--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -90,6 +90,8 @@
 3. 如果没有，CPU触发**EPT Violation**, 由**VMM截获处理**；
 4. 假设**客户机**有**m级页表**，**宿主机EPT**有**n级**，在TLB均miss的最坏情况下，会产生**m*n次内存访问**，完成**一次客户机的地址翻译**；
 
+注: 这里没有包括gCR3的访问, 带上gCR3就是`<m+1> * n`
+
 ![2020-03-30-11-40-39.png](./images/2020-03-30-11-40-39.png)
 
 这里假设**客户机页表！！！**和**EPT页表！！！**都是**4级页表**, CPU完成一次地址转换的基本过程如下.
