--- a/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
@@ -24,6 +24,9 @@ Traditional Paging versus Nested Paging
 
 ![2020-09-10-08-44-50.png](./images/2020-09-10-08-44-50.png)
 
+# ASID: Address space identifier
+
+
 VMM可以为**每个guest**提供**不同的ASID**，以便来自**不同guest**的**TLB条目**可以共存于TLB中。ASID值为零保留给host使用。如果**VMM**尝试以**guest ASID为零**执行**VMRUN**，则结果为`#VMEXIT`（`VMEXIT_INVALID`）。
 
 请注意，由于**ASID**与**guest的物理地址空间！！！** 相**关联**，因此在**一个CPU**内的**所有虚拟机**的**虚拟地址空间**中是**通用**的。 这与**影子页表**不同，在影子页表中，**ASID**标记**各个guest虚拟地址空间**。 还要注意，对于**嵌套页表**或**影子页表**，**同一ASID**可能**会或不会**与多处理器系统中**所有处理器**上的**同一地址空间**相关联； 这取决于VMM如何管理ASID分配。
