--- a/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/25. 嵌套分页/1. 传统分页和嵌套分页.md
@@ -13,7 +13,7 @@ Traditional Paging versus Nested Paging
 
 启用嵌套分页后，将有**两级地址转换**： 请参阅下面的图15-13。
 
-* guest和host级别都有自己的CR3副本，分别称为gCR3和nCR3
+* guest和host级别都有自己的CR3 copy，分别称为gCR3和nCR3, 所以是没有引入新的寄存器, 只是多了保存值的地方.
 * guest页表（gPT）是**guest线性地址**到**guest物理地址**的映射。 **guest页表**位于guest物理内存中，并由gCR3指向。
 * **嵌套页表**（nPT）是**guest物理地址**到**系统物理地址**的映射。 嵌套的页表位于**系统物理内存**中，并由nCR3指向。
 * 最近使用的从**guest线性地址**到**系统物理地址**的转换存储在**TLB**中，并在以后的guest访问中使用。
@@ -25,7 +25,6 @@ Traditional Paging versus Nested Paging
 ![2020-09-10-08-44-50.png](./images/2020-09-10-08-44-50.png)
 
 # ASID: Address space identifier
-
 
 VMM可以为**每个guest**提供**不同的ASID**，以便来自**不同guest**的**TLB条目**可以共存于TLB中。ASID值为零保留给host使用。如果**VMM**尝试以**guest ASID为零**执行**VMRUN**，则结果为`#VMEXIT`（`VMEXIT_INVALID`）。
 
