--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -1,4 +1,6 @@
 
+虚拟化支持包括VMM和客户机之间的快速切换机制、拦截客户机上的指令或事件、用于内存的外部DMA访问保护、中断处理及虚拟中断支持、客户/主机标识的TLB（减少虚拟化开销）
+
 AMD虚拟机架构的设计是为了:
 * 带有标记的guest/host TLB, 以减少虚拟化开销
 * 内存的外部(DMA)访问保护
@@ -36,4 +38,4 @@ guest可以被授予直接访问选定的I/O设备.
 
 # Restartable Instructions: 可重启的指令
 
-任务切换的异常, 任何被拦截的指令(原子指令或幂等指令除外)被拦截后, 可以重启.
+SVM设计为可安全启动，除了任务切换、任何拦截操作后被拦截的指令（原子的或等幂的）。
