--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -1,7 +1,7 @@
 
 虚拟化支持包括VMM和客户机之间的快速切换机制、拦截客户机上的指令或事件、用于内存的外部DMA访问保护、中断处理及虚拟中断支持、客户/主机标识的TLB（减少虚拟化开销）
 
-AMD虚拟机架构的设计是为了:
+AMD虚拟机架构提供下面功能:
 * 带有标记的guest/host TLB, 以减少虚拟化开销
 * 内存的外部(DMA)访问保护
 * 协助中断处理，虚拟中断支持，和增强的暂停过滤器(pause filter)
