--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/2. 安全支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/2. 安全支持.md
@@ -3,7 +3,7 @@ security support, 安全支持
 
 为了进一步实现安全初始化，SVM提供了额外的系统支持。
 
-**认证**(Attestation)。SKINIT指令和相关的系统支持(Trusted Platform Module，TPM, 可信平台模块)允许基于安全散列比较, 以可验证的方式启用可信软件(如hypervisor, 或原生操作系统)启动。(`27. 使用SKINT安全启动`)
+**认证**(Attestation)。SKINIT指令和相关的系统支持(Trusted Platform Module，TPM, 可信平台模块)允许基于安全散列(secure hash)比较, 以可验证的方式启用可信软件(如hypervisor, 或原生操作系统)启动。(`27. 使用SKINT安全启动`)
 
 **加密内存**(Encrypted Memory). 模型支持,安全加密虚拟化(股票)和加密的状态(SEV-ES)签订扩展防范检查内存和(SEV-ES)客人注册状态通过恶意程序代码,跟踪或内存内存总线设备去除通过加密客户内存和寄存器的内容(`34. 安全加密虚拟化`和`35. `)。
 
