--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
@@ -1,10 +1,10 @@
 VMRUN Instruction
 
 
-VMRUN指令是SVM的基石。VMRUN将对齐4KB页面的物理地址作为虚拟机控制块（VMCB）作为**单个参数**，该块描述了要执行的虚拟机。
+VMRUN指令是SVM的基石。它使用一个参数：一个指向**4KB对齐页**的**物理地址**。该物理页描述了执行的虚拟机（客户机），称为虚拟机控制块（Virtual Machine Control Block，VMCB）。
 
 VMCB包含：
-* guest中要拦截的指令或事件的列表（例如，写入CR3），
+* guest上将要被拦截的指令或事件的列表（例如，写入CR3），
 * 各种控制位，它们指定guest的执行环境或指示在运行来宾代码之前要执行的特殊操作，以及
 * guest处理器状态（例如控制寄存器等）。
 
