--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -2,7 +2,7 @@
 
 VMRUN指令具有`[rAX]`的**隐式寻址模式**。软件必须使用**VMCB的物理地址加载RAX**（32位模式下的EAX），VMCB是一个 4 KB对齐的页面，描述了要执行的虚拟机。RAX用于形成地址的部分由当前有效地址大小确定。
 
-VMCB通过**物理地址**访问，应映射为写回（WB）内存。
+**处理器**通过**物理地址！！！** 访问VMCB，因此，它将**VMCB**映射为**回写模式**（Writeback，WB）内存。
 
 VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。此外，处理器**必须处于保护模式**，并且`EFER.SVME`必须设置为1，否则，将出现`#UD`异常被提出。
 
