--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -8,11 +8,11 @@ VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。
 
 http://leonstudio.org/p/172
 
-**VMRUN指令**在`VM_HSAVE_PA MSR`中指定的**物理地址**处，将一些**host处理器状态信息**保存在内存中的**主机状态保存区域**中；然后从**VMCB状态存储区域**加载相应的**guest状态**。VMRUN还从**VMCB**读取**其他控制位**，这些控制位**允许VMM刷新guest TLB**、**向guest中注入虚拟中断**等。
-
-然后，VMRUN指令检查刚加载的guest状态。如果加载了非法状态，则处理器将返回主机（第15.6节）。
-
-否则，处理器现在将运行guest代码，直到发生拦截事件为止，这时处理器将挂起guest执行并按照VMRUN之后的指令恢复主机执行。这称为`#VMEXIT`，并在第15.6节中进行了详细描述。
+1. **VMRUN指令**在`VM_HSAVE_PA MSR`中指定的**物理地址**处，将一些**host处理器状态信息**保存在内存中的**主机状态保存区域**中；
+2. 然后从**VMCB状态存储区域**加载相应的**guest状态**。VMRUN还从**VMCB**读取**其他控制位**，这些控制位**允许VMM刷新guest TLB**、**向guest中注入虚拟中断**等; 
+3. 然后，VMRUN指令**检查刚加载的guest状态**。
+    * 如果加载了**非法状态**，则处理器将**返回主机**（`6. VMEXIT`）。
+    * 否则，处理器现在将**运行guest代码**，直到发生拦截事件为止，这时处理器将挂起guest执行并按照VMRUN之后的指令恢复主机执行。这称为`#VMEXIT`，并在第15.6节中进行了详细描述。
 
 VMRUN**保存或还原最少数量的状态信息**，以允许VMM在guest退出后恢复执行。这使VMM可以快速处理简单的拦截条件。如果必须保存或还原其他guest状态信息（例如，处理更复杂的拦截或切换到其他guest），则VMM必须使用VMLOAD和VMSAVE指令来处理其他guest状态。 （请参阅第15.5.2节）。
 
