--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -13,9 +13,9 @@ http://leonstudio.org/p/172
 3. VMRUN还从**VMCB**读取**其他控制位**，这些控制位**允许VMM刷新guest TLB**、**向guest中注入虚拟中断**等; 
 4. 然后，VMRUN指令**检查刚加载的guest状态**。
     * 如果加载了**非法状态**，则处理器将**返回主机**（`6. VMEXIT`）。
-    * 否则，处理器现在将**运行guest代码**，直到发生拦截事件为止，这时处理器将挂起guest执行并按照VMRUN之后的指令恢复主机执行。这称为`#VMEXIT`，并在第15.6节中进行了详细描述。
+    * 否则，处理器现在将**运行guest代码**，直到发生**拦截**事件为止，这时处理器将挂起guest执行并按照VMRUN之后的指令恢复主机执行。这称为`#VMEXIT`，并在第15.6节中进行了详细描述。
 
-VMRUN**保存或还原最少数量的状态信息**，以允许VMM在guest退出后恢复执行。这使VMM可以快速处理简单的拦截条件。如果必须保存或还原其他guest状态信息（例如，处理更复杂的拦截或切换到其他guest），则VMM必须使用VMLOAD和VMSAVE指令来处理其他guest状态。 （请参阅第15.5.2节）。
+VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后恢复执行。这样, VMM可以快速处理简单的拦截条件。如果VMM必须**保存**或**还原**其他guest状态信息（例如，**处理更复杂的拦截**或**切换到其他guest**），则VMM必须使用**VMLOAD**和**VMSAVE指令**来处理其他guest状态。 （`5.2 VMSAVE和VMLOAD指令`）。
 
 # 保存主机状态: Saving Host State
 
