--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/2. VMSAVE和VMLOAD指令.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/2. VMSAVE和VMLOAD指令.md
@@ -1,7 +1,7 @@
 
 VMSAVE and VMLOAD Instructions
 
-这些指令在处理器和guest的VMCB之间传输其他guest寄存器上下文，包括其他方式无法访问的隐藏上下文，以实现比VMRUN和`#VMEXIT`执行的上下文切换更完整的上下文。 VMCB的系统物理地址在rAX中指定。当需要执行这些操作时，将在**执行VMRUN之前按需执行VMLOAD**，并在`#VMEXIT`之后的**任意所需点执行VMSAVE**。
+这些指令在处理器和guest的VMCB之间传输其他guest寄存器上下文，包括其他方式无法访问的隐藏上下文，以实现比**VMRUN**和`#VMEXIT`执行的上下文切换更完整的上下文。 VMCB的系统物理地址在rAX中指定。当需要执行这些操作时，将在**执行VMRUN之前按需执行VMLOAD**，并在`#VMEXIT`之后的**任意所需点执行VMSAVE**。
 
 VMSAVE和VMLOAD指令使用**rAX**中**VMCB的物理地址**。这些指令补充了**VMRUN指令**和`#VMEXIT`的状态保存/恢复功能。它们提供对**软件无法访问**的隐藏处理器状态的访问，以及其他特权状态。
 
