--- a/Virtualization/Learning/AMD虚拟化/SVM/8. 解码辅助/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/8. 解码辅助/0. 概述.md
@@ -1,1 +1,3 @@
 Decode Assists
+
+提供了**解码辅助功能**，以允许管理程序更有效地解码guest指令。 CPUID `Fn8000_000A_EDX [DecodeAssists] = 1`表示支持此功能。 有关使用CPUID指令的更多信息，请参见第64页，第3.3节，“处理器功能标识”。
