--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/15. VMCB状态缓存/2. 清理VMCB Clean Bits的指南.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/15. VMCB状态缓存/2. 清理VMCB Clean Bits的指南.md
@@ -9,7 +9,7 @@
 * hypervisor在**不同于**上次执行guest虚拟机的**CPU内核**上执行guest虚拟机。
 * 自**上次执行guest**以来，hypervisor已将**guest的VMCB**移到了**另一个物理页面**。
 
-在这些情况下，如果无法将VMCB Clean位清零，则可能导致不确定的行为。
+在这些情况下，如果没有将VMCB Clean位清零，则可能导致不确定的行为。
 
 当hypervisor执行当前**未缓存的guest虚拟机**时，CPU会**自动**将当前VMRUN上的**VMCB Clean field字段**视为**零**。CPU会将**VMCB物理地址**与所有**缓存的VMCB物理地址**进行比较，如果没有缓存的VMCB地址匹配，会将**VMCB Clean field字段**视为**零**。
 
