--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/1. 可虚拟化架构和不可虚拟化架构.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/1. 可虚拟化架构和不可虚拟化架构.md
@@ -53,10 +53,14 @@
 
 # 5. 虚拟化漏洞的解决办法
 
-⓵ **所有指令解释执行**. 最简单最直接的方法是, 如果**所有虚拟化都采用模拟来实现(！！！**), 例如**解释执行**, 就是**取一条指令**, **模拟出这条指令执行的效果**, 再**继续取下一条指令(！！！所有指令, 无论是否敏感指令！！！**), 那么就**不存在所谓陷入不陷入**的问题, 从而避免了虚拟化漏洞. 这种方法不但能适用于模拟与物理机相同体系结构的虚拟机, 而且也能模拟不同体系结构的虚拟机. 这种方法保证了所有指令执行收到VMM的监管, 但它对每条指令不区别对待, 最大缺点是**性能太差**, 不符合虚拟机"高效"特点.
+⓵ 半虚方式, 这个很大程度也算软件辅助. 修改操作系统的源码来与下层虚拟化管理层软件协同工作
+
+⓶ **所有指令解释执行**. 最简单最直接的方法是, 如果**所有虚拟化都采用模拟来实现(！！！**), 例如**解释执行**, 就是**取一条指令**, **模拟出这条指令执行的效果**, 再**继续取下一条指令(！！！所有指令, 无论是否敏感指令！！！**), 那么就**不存在所谓陷入不陷入**的问题, 从而避免了虚拟化漏洞. 这种方法不但能适用于模拟与物理机相同体系结构的虚拟机, 而且也能模拟不同体系结构的虚拟机. 这种方法保证了所有指令执行收到VMM的监管, 但它对每条指令不区别对待, 最大缺点是**性能太差**, 不符合虚拟机"高效"特点.
 
 既要填补**虚拟化漏洞**, 又要保证**虚拟化性能**, 只能采取一些**辅助手段**.
 
-⓶ **硬件辅助手段**. 直接**在硬件层面填补虚拟化漏洞！！！**, 
+⓷ **硬件辅助手段**. 直接**在硬件层面填补虚拟化漏洞！！！**, 
 
-⓷ **软件辅助**. 通过**软件**的方法**避免虚拟机中使用无法陷入的敏感指令！！！**.
+⓸ **软件辅助**. 通过**软件**的方法**避免虚拟机中使用无法陷入的敏感指令！！！**. 
+
+⓹ 半虚方式, 这个很大程度也算软件辅助
