--- a/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/29. AVIC/2. 架构定义.md
@@ -335,7 +335,12 @@ kvm中代码:
 除了正常的VMRUN操作外，CPU在**进入guest时！！！** 还会在**vAPIC backing页面**中**重新评估APIC状态**，并根据需要**处理未决的中断！！！**。 这个就是额外的VMRUN处理, AVIC打开后的效果.
 
 特别是：
-* 当**VMRUN时**，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)**IRR**中表示的**最高优先级**的**挂起中断**(pending interrupt). 这就是`6.2.2`的vcpu没运行时依赖的机制.
+* 当**VMRUN时**，如果**中断屏蔽**和**优先级**允许，则**评估中断状态**并**传递**(deliver, 交付, 触发等意思)**IRR**中表示的**最高优先级**的**挂起中断**(pending interrupt). 这就是`6.2.2`的vcpu没运行时依赖的机制. 
+
+这个注入是硬件自动做的?? 只需要设置irr即可
+
+那没有AVIC, 走中断注入?? 需要VMM手动注入, 手动设置VMCB的一些内容, 不仅仅是IRR??
+
 * **进入guest后**，**VMRUN处理期间**收到的任何门铃信号都会被立即识别
 * 为虚拟处理器启用了**AVIC模式**时，将忽略VMCB中的`V_IRQ`，`V_INTR_PRIO`，`V_INTR_VECTOR`和`V_IGN_TPR`字段。
 
