--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -2,12 +2,16 @@
 
 virtualization support, 虚拟化支持
 
+# 功能概述
+
 AMD虚拟化架构提供下面功能:
-* 带有标记的guest/host TLB, 以减少虚拟化开销
-* 外部(DMA)访问内存的保护
+* 带有**标记**的guest/host **TLB**, 以减少虚拟化开销
+* 外部(**DMA**)访问内存的保护
 * 协助**中断处理**，**虚拟中断**支持，和增强的**暂停过滤器**(pause filter)
-* 拦截客户机中可选指令或事件的能力
-* VMM和guest之间快速切换的机制
+* 拦截**客户机**中可选**指令**(instructions)或**事件**(events)的能力
+* VMM和guest之间**快速切换**的机制
+
+SVM硬件特征说明如下：
 
 # Guest Mode: 虚拟机模式
 
@@ -19,9 +23,9 @@ CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用.
 
 # External Access Protection: 外部访问保护
 
-guest可以被授予直接访问选定的I/O设备.
+**guest**可以被授予**直接访问选定的I/O设备**.
 
-而硬件支持旨在防止一个guest拥有的**设备**访问另一个客户(或VMM)拥有的**内存**。即DMA操作.
+而硬件支持旨在防止一个guest拥有的**设备**访问**另一个客户！！！** (或**VMM！！！)** 拥有的**内存**。即DMA操作.
 
 # 带有标记的TLB
 
