--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -35,8 +35,8 @@ CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用.
 
 为了方便中断的高效虚拟化，在VMCB flags的控制下提供了以下支持:
 
-* **截取物理中断delivery**(Intercepting physical interrupt delivery)。VMM可以请求**物理中断**导致**正在运行**的guest退出，从而允许VMM处理中断。
-* **虚拟中断**(Virtual interrupts)。VMM可以**将虚拟中断注入到客户机**中。在VMM的控制下，客户透明地使用`EFLAGS.IF`**中断掩码位**的**虚拟副本**和APIC任务优先级寄存器(**TPR**)的**虚拟副本**，而不是物理资源。
+* **截取物理中断delivery**(Intercepting physical interrupt delivery)。VMM可以请求**物理中断**引起**正在运行**的guest退出，从而允许VMM处理中断。
+* **虚拟中断**(Virtual interrupts)。VMM可以**将虚拟中断注入到客户机**中。在VMM的控制下，**虚拟机**透明地使用`EFLAGS.IF`**中断掩码位**的**虚拟副本**和APIC**任务优先级寄存器**(**TPR**)的**虚拟副本**，而不是物理资源。
 * **共享物理APIC**(Sharing a physical APIC)。SVM允许多个客户机共享一个物理APIC，同时防止恶意的或有缺陷的客户机永远不ack高优先级中断(从而关闭其他客户机的中断)。
 * **中断直接交付**(Direct interrupt delivery). 在支持它的模型上，高级虚拟中断控制器（AVIC）扩展虚拟化了APIC的中断传递功能。这提供了将设备或处理器间中断直接传递到目标vCPU的要求，这避免了让VMM确定中断路由并加快中断传递的开销。(请参阅`29. AVIC`)。
 
