--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -1,8 +1,21 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 功能概述](#1-功能概述)
+- [2. 虚拟机模式: Guest Mode](#2-虚拟机模式-guest-mode)
+- [3. External Access Protection: 外部访问保护](#3-external-access-protection-外部访问保护)
+- [4. 带有标记的TLB](#4-带有标记的tlb)
+- [5. 中断支持: Interrupt Support](#5-中断支持-interrupt-support)
+- [6. 可重启的指令: Restartable Instructions](#6-可重启的指令-restartable-instructions)
+
+<!-- /code_chunk_output -->
+
 
 virtualization support, 虚拟化支持
 
-# 功能概述
+# 1. 功能概述
 
 AMD虚拟化架构提供下面功能:
 * 带有**标记**的guest/host **TLB**, 以减少虚拟化开销
@@ -13,7 +26,7 @@ AMD虚拟化架构提供下面功能:
 
 SVM硬件特征说明如下：
 
-# Guest Mode: 虚拟机模式
+# 2. 虚拟机模式: Guest Mode
 
 通过 VMRUN 指令, 处理器会进入一个新的模式. 在 guest mode中, 一些x86指令的行为会有所变化以更好支持虚拟化.
 
@@ -21,25 +34,25 @@ CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用.
 
 特性指示位 `CPUID Fn0000_0001_ECX[31]` 已预留给VMM使用，以表示存在VMM。VMM存在, 则此位为1, 物理CPU的话, 此位设为0。这个位可以被guest探测，以检测它们是否在虚拟机中运行。
 
-# External Access Protection: 外部访问保护
+# 3. External Access Protection: 外部访问保护
 
 **guest**可以被授予**直接访问选定的I/O设备**.
 
 而硬件支持旨在防止一个guest拥有的**设备**访问**另一个客户！！！** (或**VMM！！！)** 拥有的**内存**。即DMA操作.
 
-# 带有标记的TLB
+# 4. 带有标记的TLB
 
-在SVM模型中，VMM映射到不同于客户机的地址，为了减少切换的开销，TLB用**地址空间ID**（Address Space Identifier，ASID）进行标识，用来将主机空间条目与客户机空间条目区分开。
+在SVM模型中，VMM映射到不同于客户机的地址，为了减少切换的开销，TLB用**地址空间ID**（Address Space Identifier，ASID）进行标识，用来将**主机空间条目**与**客户机空间条目**区分开。
 
-# Interrupt Support: 中断支持
+# 5. 中断支持: Interrupt Support
 
 为了方便中断的高效虚拟化，在VMCB flags的控制下提供了以下支持:
 
 * **截取物理中断delivery**(Intercepting physical interrupt delivery)。VMM可以请求**物理中断**引起**正在运行**的guest退出，从而允许VMM处理中断。
 * **虚拟中断**(Virtual interrupts)。VMM可以**将虚拟中断注入到客户机**中。在VMM的控制下，**虚拟机**透明地使用`EFLAGS.IF`**中断掩码位**的**虚拟副本**和APIC**任务优先级寄存器**(**TPR**)的**虚拟副本**，而不是物理资源。
-* **共享物理APIC**(Sharing a physical APIC)。SVM允许多个客户机共享一个物理APIC，同时防止恶意的或有缺陷的客户机永远不ack高优先级中断(从而关闭其他客户机的中断)。
-* **中断直接交付**(Direct interrupt delivery). 在支持它的模型上，高级虚拟中断控制器（AVIC）扩展虚拟化了APIC的中断传递功能。这提供了将设备或处理器间中断直接传递到目标vCPU的要求，这避免了让VMM确定中断路由并加快中断传递的开销。(请参阅`29. AVIC`)。
+* **共享物理APIC**(Sharing a physical APIC)。SVM允许**多个客户机**共享**一个物理APIC**，同时防止恶意的或有缺陷的客户机永远不ack高优先级中断(从而关闭其他客户机的中断)。
+* **中断直接交付**(Direct interrupt delivery). 在支持它的模型上，**高级虚拟中断控制器**（Advanced Virtual Interrupt Controller, AVIC）扩展虚拟化了**APIC的中断传递功能**。这提供了将**设备**或**处理器间**中断**直接传递到目标vCPU**的要求，这避免了让VMM确定中断路由并加快中断传递的开销。(请参阅`29. AVIC`)。
 
-# Restartable Instructions: 可重启的指令
+# 6. 可重启的指令: Restartable Instructions
 
-SVM设计为可安全启动，除了任务切换、任何拦截操作后被拦截的指令（原子的或等幂的）。
+SVM设计为**可安全启动**，除了任务切换、任何拦截操作后被拦截的指令（原子的或等幂的）。
